Improved execution strategy implementation