@@ -26,7 +26,7 @@ public class QueryTest {
     public void testUCC() {
         String query = "SELECT X FROM CC(*) X WHERE UCC(X)";
         List<ResultSet> resultSetList = metaserve.executeQuery(query);
-        ResultSet first = resultSetList.get(0);
+        ResultSet first = resultSetList.getFirst();
         first.printResults();
     }
 
@@ -34,7 +34,7 @@ public class QueryTest {
     public void testIND() {
         String query = "SELECT X, Y FROM CC(*) X, CC(*) Y WHERE IND(X,Y)";
         List<ResultSet> resultSetList = metaserve.executeQuery(query);
-        ResultSet first = resultSetList.get(0);
+        ResultSet first = resultSetList.getFirst();
         first.printResults();
     }
 
@@ -42,7 +42,7 @@ public class QueryTest {
     public void testFD() {
         String query = "SELECT X, Y FROM CC(*) X, CC(*) Y WHERE FD(X,Y)";
         List<ResultSet> resultSetList = metaserve.executeQuery(query);
-        ResultSet first = resultSetList.get(0);
+        ResultSet first = resultSetList.getFirst();
         first.printResults();
     }
 
@@ -50,15 +50,15 @@ public class QueryTest {
     public void testQ1() {
         String query = "SELECT X, Y FROM CC(*) X, CC(*) Y WHERE IND(X,Y) AND UCC(Y)";
         List<ResultSet> resultSetList = metaserve.executeQuery(query);
-        ResultSet first = resultSetList.get(0);
+        ResultSet first = resultSetList.getFirst();
         first.printResults();
     }
 
     @Test
     public void testQ2() {
-        String query = "SELECT X, Y, Z FROM CC(*) X, CC(*) Y, CC(*) Z WHERE FD(X,Z) AND IND(X,Y) AND UCC(Y)";
+        String query = "SELECT X, Y, Z FROM CC(*) X, CC(*) Y, CC(*) Z WHERE FD(Z,X) AND IND(X,Y) AND UCC(Y)";
         List<ResultSet> resultSetList = metaserve.executeQuery(query);
-        ResultSet first = resultSetList.get(0);
+        ResultSet first = resultSetList.getFirst();
         first.printResults();
     }
 
@@ -66,7 +66,7 @@ public class QueryTest {
     public void testQ3() {
         String query = "SELECT W, X, Y, Z FROM CC(*) W, CC(*) X, CC(*) Y, CC(*) Z WHERE FD(X,Z) AND IND(X,Y) AND FD(Y,W)";
         List<ResultSet> resultSetList = metaserve.executeQuery(query);
-        ResultSet first = resultSetList.get(0);
+        ResultSet first = resultSetList.getFirst();
         first.printResults();
     }
 
@@ -74,7 +74,7 @@ public class QueryTest {
     public void testQ4() {
         String query = "SELECT X, Y FROM CC(*) X, CC(*) Y WHERE UCC(X) AND IND(X,Y) AND UCC(Y)";
         List<ResultSet> resultSetList = metaserve.executeQuery(query);
-        ResultSet first = resultSetList.get(0);
+        ResultSet first = resultSetList.getFirst();
         first.printResults();
     }
 
@@ -82,7 +82,7 @@ public class QueryTest {
     public void testQ5() {
         String query = "SELECT X, Y, Z FROM CC(*) X, CC(*) Y, CC(*) Z WHERE IND(X,Y) AND IND(Y,Z) AND UCC(Y)";
         List<ResultSet> resultSetList = metaserve.executeQuery(query);
-        ResultSet first = resultSetList.get(0);
+        ResultSet first = resultSetList.getFirst();
         first.printResults();
     }
 
@@ -90,7 +90,7 @@ public class QueryTest {
     public void testQ6() {
         String query = "SELECT P, Q, X, Y FROM CC(*) P, CC(*) Q, CC(*) X, CC(*) Y WHERE FD(X,P) AND IND(X,Y) AND FD(Y,Q)";
         List<ResultSet> resultSetList = metaserve.executeQuery(query);
-        ResultSet first = resultSetList.get(0);
+        ResultSet first = resultSetList.getFirst();
         first.printResults();
     }
 
@@ -98,34 +98,34 @@ public class QueryTest {
     public void testQ7() {
         String query = "SELECT P, Q, X, Y FROM CC(*) P, CC(*) Q, CC(*) X, CC(*) Y WHERE FD(P,X) AND IND(X,Y) AND FD(Q,Y)";
         List<ResultSet> resultSetList = metaserve.executeQuery(query);
-        ResultSet first = resultSetList.get(0);
+        ResultSet first = resultSetList.getFirst();
         first.printResults();
     }
 
     @Test
     public void testQ8() {
-        String query = "SELECT X, Y, Z, P, Q, R FROM CC(*) X, CC(*) Y, CC(*) Z, CC(*) X, CC(*) Y, CC(*) Z " +
+        String query = "SELECT X, Y, Z, P, Q, R FROM CC(*) X, CC(*) Y, CC(*) Z, CC(*) P, CC(*) Q, CC(*) R " +
                 "WHERE FD(X,P) AND FD(X,Q) AND IND(X,Y) AND IND(Y,Z) AND FD(Y,R) AND UCC(R)";
         List<ResultSet> resultSetList = metaserve.executeQuery(query);
-        ResultSet first = resultSetList.get(0);
+        ResultSet first = resultSetList.getFirst();
         first.printResults();
     }
 
     @Test
     public void testQ9() {
-        String query = "SELECT X, Y, Z, P, Q, R FROM CC(*) X, CC(*) Y, CC(*) Z, CC(*) X, CC(*) Y, CC(*) Z " +
+        String query = "SELECT X, Y, Z, P, Q, R FROM CC(*) X, CC(*) Y, CC(*) Z, CC(*) P, CC(*) Q, CC(*) R " +
                 "WHERE FD(X,Y) AND FD(Y,Z) AND IND(Z,R) AND IND(X,P) AND IND(X,Q) AND UCC(Q)";
         List<ResultSet> resultSetList = metaserve.executeQuery(query);
-        ResultSet first = resultSetList.get(0);
+        ResultSet first = resultSetList.getFirst();
         first.printResults();
     }
 
     @Test
     public void testQ10() {
-        String query = "SELECT X, Y, Z, P, Q, R FROM CC(*) X, CC(*) Y, CC(*) Z, CC(*) X, CC(*) Y, CC(*) Z " +
+        String query = "SELECT X, Y, Z, P, Q, R FROM CC(*) X, CC(*) Y, CC(*) Z, CC(*) P, CC(*) Q, CC(*) R " +
                 "WHERE IND(X,Z) AND FD(Z,P) AND FD(Z,Q) AND IND(X,Y) AND IND(Y,R) AND UCC(R)";
         List<ResultSet> resultSetList = metaserve.executeQuery(query);
-        ResultSet first = resultSetList.get(0);
+        ResultSet first = resultSetList.getFirst();
         first.printResults();
     }
 
@@ -133,6 +133,7 @@ public class QueryTest {
     public void testExtra() {
         String query = "SELECT X, Y, Z FROM CC(*) X, CC(*) Y, CC(*) Z WHERE UCC(Z) AND FD(Z,X) AND IND(X,Y) AND UCC(Y)";
         List<ResultSet> resultSetList = metaserve.executeQuery(query);
-        System.out.println(resultSetList.getFirst().getRows2());
+        ResultSet first = resultSetList.getFirst();
+        first.printResults();
     }
 }
